--- a/subdir/.github/workflows/deploy.yml
+++ b/subdir/.github/workflows/deploy.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Build
         run: yarn build
 
+      - name: Copy extend-apps-directory.json for public access
+        run: cp app/data/extend-apps-directory.json build/client/extend-apps-directory.json
+
       - name: Copy 404
         run: cp build/client/index.html build/client/404.html
 
